# nymphos

./: .gitattributes  .gitignore  README.md  a.py  a.txt  accessible.py  build-rpm.md  build_rpm.py  build_srpms.sh  copyright.md  desktop.py  dockerfile  license.md  low_dep.py  package_lists.py  packages.py  packages2add.txt  prompt.py  service_packages.py  spec.list  tarballs.txt
docs/: dte-readme.md  local_runner.md
reports/: docs.txt  package_lists.py  src.txt  tarballs.txt
setup/: 2build_packages.sh  WARNING.md  setup_bootloader.sh  setup_chroot.sh  setup_dracut.sh
specs/: Python.spec  alsa-utils.spec  audit.spec  autoconf.spec  automake.spec  bash.spec  bc.spec  binutils.spec  bison.spec  bzip2.spec  coreutils.spec  cracklib.spec  cronie.spec  dbus-glib.spec  dbus.spec  dejavu-fonts-ttf.spec  dhcpcd.spec  diffutils.spec  dracut.spec  e2fsprogs.spec  espeak-ng.spec  fail2ban.spec  findutils.spec  firefox.spec  flex.spec  fontconfig.spec  gawk.spec  gcc.spec  geany.spec  gettext.spec  gmp.spec  gperf.spec  grep.spec  gtk.spec  gzip.spec  inetutils.spec  iproute2.spec  less.spec  libcap-ng.spec  libcap.spec  (+39 more)
src/: dirs.txt  dirs2.txt  latest-nvidia.py  pack.py  tree.py  tree.txt
src/nymph-media-control/: media-menu.py  meson.build  nymph-media-control-0.1.tar.xz  nymph-media-control.desktop  nymph-media-control.spec  nymph-media-control.vala  pack.py  readme.md
tarballs/: a.txt  b.txt  packages.py  packages.txt
tmp/: Python-devel.spec  Python.json  Python.spec  TXT  a.txt  alsa-utils-devel.spec  alsa-utils.json  alsa-utils.spec  audit-devel.spec  audit.json  (+239 more)
(+397 files in other folders)
